# llama-onnx-cpp

./: .gitignore  CMakeLists.txt  readme.md
lib/: libonnxruntime-genai.dylib
model-onnx/: genai_config.json
src/: ._main.cpp  main.cpp
